fixed an animation overlapping in hero section

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@
     border: 0;
     box-sizing: border-box;
     font-family: "roboto";
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
 }
 body{
     background-color: var(--primary-bg);
