--- a/styles/hero.css
+++ b/styles/hero.css
@@ -35,5 +35,5 @@
 .hero-icon{
     width: 55px;
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.9;
 }
